add ch translation

--- a/app/assets/templates/comments/comment_form.jst.ejs
+++ b/app/assets/templates/comments/comment_form.jst.ejs
@@ -1,7 +1,7 @@
 <div class="comment-form">
   <div class="comment-list-text">
     <i class="fa fa-comment"></i>&nbsp;
-    New Comment
+    新建注释
   </div>
   <form class="comment">
     <input type="hidden" name="comment[note_id]" value="<%= note.get("id") %>">
@@ -9,10 +9,10 @@
     <textarea name="comment[body]"></textarea>
 
     <button type="submit" class="comment-button submit">
-      Post Comment
+      提交
     </button>
     <button class="comment-button cancel">
-      Cancel
+      取消
     </button>
   </form>
 </div>
