--- a/app/assets/templates/likes/show.jst.ejs
+++ b/app/assets/templates/likes/show.jst.ejs
@@ -1,9 +1,9 @@
 <div class="like-button">
   <% if (note.currentUserLike()) { %>
-      REMOVE LIKE
+      取消喜欢
       <i class="fa fa-thumbs-o-down"></i>
   <% } else { %>
-      LIKE
+      喜欢
       <i class="fa fa-thumbs-o-up"></i>
   <% } %>
 </div>
