--- a/app/assets/templates/static_pages/search_bar.jst.ejs
+++ b/app/assets/templates/static_pages/search_bar.jst.ejs
@@ -1,7 +1,7 @@
 <div class="search-left">
   <a class="nav-logo">
     <i class='fa fa-file-text'></i>
-    BETTERNOTE
+    智能笔记
   </a>
 </div>
 <div class="search-bar group">
@@ -32,13 +32,13 @@
       <div class="clear-search">
         <i class="fa fa-times-circle fa-lg"></i>
       </div>
-      <input type="submit" class="submit" value="Search">
+      <input type="submit" class="submit" value="搜索">
     </div>
   </form>
 </div>
 <div class="new-note">
   <button class="create-new-note">
     <i class="fa fa-plus"></i>&nbsp;
-    New Note
+    新建笔记
   </button>
 </div>
