--- a/app/assets/templates/static_pages/sidebar_item.jst.ejs
+++ b/app/assets/templates/static_pages/sidebar_item.jst.ejs
@@ -13,14 +13,14 @@
       <div class="show-modal"
           data-action="edit-notebook"
           data-item-id="<%= notebook.escape("id") %>">
-        Rename...
+        重命名...
       </div>
     </li>
     <li>
       <div class="show-modal"
           data-action="delete-notebook"
           data-item-id="<%= notebook.escape("id") %>">
-        Delete Notebook
+        删除笔记本
       </div>
     </li>
   </ul>
