--- a/app/assets/templates/tags/delete.jst.ejs
+++ b/app/assets/templates/tags/delete.jst.ejs
@@ -1,18 +1,18 @@
 <span class="modal-x close-modal">&times;</span>
 
 <h3>
-  Delete Tag
+  删除标签
 </h3>
 
 <form class="tag group">
 
   <div class="input">
-    <label for="tag-name">Are you sure you want to delete this tag?</label>
+    <label for="tag-name">确定要删除该标签吗?</label>
   </div>
 
   <div class="form-right group">
     <div class="cancel close-modal">
-      Cancel
+      取消
     </div>
 
     <div class="submit">
