--- a/app/assets/templates/tags/form.jst.ejs
+++ b/app/assets/templates/tags/form.jst.ejs
@@ -7,14 +7,14 @@
 <form class="tag group">
 
   <div class="input">
-    <label for="tag-name">Tag Name</label>
+    <label for="tag-name">标签名</label>
     <input type="text" name="tag[name]"
         id="tag-name" value="<%= tag.get("name") %>">
   </div>
 
   <div class="form-right group">
     <div class="cancel close-modal">
-      Cancel
+      取消
     </div>
 
     <div class="submit">
