--- a/app/assets/templates/users/unfriend.jst.ejs
+++ b/app/assets/templates/users/unfriend.jst.ejs
@@ -1,7 +1,7 @@
 <span class="modal-x close-modal">&times;</span>
 
 <h3>
-  Remove Friend
+  删除朋友
 </h3>
 
 <form class="note group">
@@ -12,7 +12,7 @@
 
   <div class="form-right group">
     <div class="cancel close-modal">
-      Cancel
+      取消
     </div>
 
     <div class="submit">
