--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -21,11 +21,11 @@
   </div>
 </header>
 
-<h1>Welcome to BetterNote</h1>
+<h1>欢迎使用BetterNote</h1>
 <h3>Like Evernote.  But Better*.</h3>
 
 <div class="demo-user">
-  Demo User (Employers Click Here)
+  demo账号 (Employers Click Here)
 </div>
 
 <div class=content>
