--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,24 +2,24 @@
   <%= auth_token %>
 
   <div class="heading group">
-    <h2>Sign Up</h2>
+    <h2>注册</h2>
     <div class="new-account">
-      or <a href="<%= new_session_url %>">Sign In</a>
+      or <a href="<%= new_session_url %>">登录</a>
     </div>
   </div>
 
   <div class="input">
-    <label class="user-username">Username</label>
+    <label class="user-username">用户名</label>
     <input type="text" name="user[username]" id="user-username">
   </div>
 
   <div class="input">
-    <label class="user-email">Email</label>
+    <label class="user-email">邮箱</label>
     <input type="email" name="user[email]" id="user-email">
   </div>
 
   <div class="input">
-    <label class="user-password">Password</label>
+    <label class="user-password">密码</label>
     <input type="password" name="user[password]" id="user-password">
   </div>
 
