--- a/app/assets/templates/notes/delete.jst.ejs
+++ b/app/assets/templates/notes/delete.jst.ejs
@@ -1,18 +1,18 @@
 <span class="modal-x close-modal">&times;</span>
 
 <h3>
-  Delete Note
+  删除笔记
 </h3>
 
 <form class="note group">
 
   <div class="input">
-      Are you sure you want to delete this note?
+      你确定要删除该笔记吗?
   </div>
 
   <div class="form-right group">
     <div class="cancel close-modal">
-      Cancel
+      取消
     </div>
 
     <div class="submit">
