--- a/app/assets/templates/tags/show.jst.ejs
+++ b/app/assets/templates/tags/show.jst.ejs
@@ -24,7 +24,7 @@ DELETE
 </ul>
 <div class="notes-list-footer group">
   <div class="notes-list-footer-left">
-      View Options
+      视图选项
       <i class="fa fa-caret-up"></i>
     <ul class="options-dropdown">
       <li class="options-dropdown-header">
