--- a/app/views/notes/_list_footer.html.erb
+++ b/app/views/notes/_list_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="notes-list-footer group">
   <div class="notes-list-footer-left">
-      View Options
+      视图选项
       <i class="fa fa-caret-up"></i>
     <ul class="options-dropdown">
       <li class="options-dropdown-header">
