--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <section class="left-margin-no-list">
-  <h1>All Users</h1>
+  <h1>所有用户</h1>
 
   <ul class="users">
     <% @users.each do |user| %>
